update social-media on menu-overlay && fix font error on IOS => nav link

--- a/res/styles/components/_menu-overlay.scss
+++ b/res/styles/components/_menu-overlay.scss
@@ -25,6 +25,11 @@
     .social-media__link{
       width: 45px;
       height: 45px;
+      padding: 5px;
+      svg{
+        width: 22px;
+        height: 22px;
+      }
     }
   }
 
@@ -38,6 +43,7 @@
       font-size: 50px;
       display: flex;
       transform: translateX(1000%);
+      font-family: sans-serif;
 
 
       &-num{
